# Agentic-Driven-SDLC

./: .env.template  .gitignore  .gitleaks.toml  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  plan-approved.json  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.claude/: settings.json
.zap/: rules.tsv
audit/: audit-plan.md  findings.md  meta-analysis-harness-and-audit-trail.md  plan-artifact-location-audit.md  reconciliation-report.md  remediation-plan.md  scrollystory-journey-architecture.md  verification-report.md  website-content-grounding-report.md
docs/: ARCHITECTURE.md  COMPONENT_MAP.md  github-public-repo-checklist.md  github-ruleset.md  phase1-known-issues.md
flagd/: flags.json
plane-integration/: README-mcp.md  README.md  REMOTE_ACCESS.md  agent_consumer.py  apply_delta.py  apply_upsert_plan.py  build_delta.py  dispatcher.py  dump_board.py  organize_plane_views.py  plane_client.py  plane_mcp_server.py  plane_preflight.py  provision_plane.py  reorg_plane.py  setup_cf_access.py  the_loop.py  webhook_handler.py
plane-selfhost/: credentials.env.template  deploy.sh  oci-lock-ingress.sh  plane.env.template  standalone-deploy.sh  tunnel.sh
schema/: feature_list.schema.json
tools/: actor_identity.py  audit_log.py  audit_verify.py  baseline_gate.py  baseline_writer.py  ci_evidence_check.py  coverage.py  coverage_gate.py  deepeval_gate.py  depth_feed.py  durable_orchestrator.py  event_bus.py  evidence_collector.py  evidence_gate.py  execution_bounds.py  feature_list_init.py  governed_pilot.py  hook_telemetry.py  kill_switch.py  loop_gate.py  materialize_feature_list.py  model_fingerprint.py  observability.py  opa_input.py  orphan_detector.py  perf_a11y_verifier.py  plane_config_audit.py  predictive_router.py  req_id_scan.py  (+13 more)
(+237 files in other folders)
